# data-exploration

./: pyproject.toml
data/: netflix_data.csv  spotify_class_test.csv  spotify_dt_gridsearch.csv
data_explorations/: netflix_data_cleaning.py  spotify.ipynb  spotify_recommending.ipynb
