[tool.poetry]
name = "data-explorations"
version = "0.1.0"
description = ""
authors = ["Jared Sulzdorf <j.sulzdorf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pyarrow = "^15.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
