[tool.poetry]
name = "data-explorations"
version = "0.1.0"
description = ""
authors = ["Jared Sulzdorf <j.sulzdorf@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.0"
matplotlib = "^3.8.3"
numpy = "^1.26.4"
pyarrow = "^15.0.0"
ipykernel = "^6.29.3"
scikit-learn = "^1.4.1.post1"
seaborn = "^0.13.2"
scipy = "^1.12.0"
category-encoders = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
